fixing agenda table spacing

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -242,6 +242,10 @@ iframe.template {
         width: 20%;
     }
 
+    th:nth-child {
+        width: 40%;
+    }
+
     th:last-child {
         width: 20%;
     }
